[tool.poetry]
name = "io"
version = "0.1.0"
description = "A code running discord bot"
authors = ["Lunarmagpie <bambolambo0@gmail.com>"]
readme = "README.md"
packages = [{ include = "bot" }]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
hikari = "^2.0.0.dev116"
hikari-crescent = "^0.5.2"
hikari-flare = "^0.1.0b4"
cachetools = "^5.3.0"
result = "^0.9.0"
dahlia = "^2.3.0"
apgorm = "^1.0.0b14"
python-dotenv = "^1.0.0"
hikari-miru = "^3.0.2"
more-itertools = "^9.1.0"
rapidfuzz = "^2.13.7"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["bot"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
select = [
    "E",
    "F",
    # isort
    "I001",
    # Returns
    "RET",
    # Annotations
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
]

[tool.black]
line-length = 88
